updatesin photos and others

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       </div>
       <div>
         <div class="card hero-card center">
-          <img class="avatar" src="https://images.unsplash.com/photo-1607746882042-944635dfe10e?q=80&w=400&auto=format&fit=crop" alt="Profile avatar placeholder"/>
+          <img class="avatar" src="/me.jpg" alt="Profile avatar placeholder"/>
           <h3 style="margin:.8rem 0 .2rem">Suman Sourav Chakra</h3>
           <div class="muted">Full‑stack Developer • AI/ML • Cloud</div>
           <div style="margin-top: .8rem;">
@@ -266,18 +266,18 @@
       <div class="skills">
         <div class="card">
           <h3>Frontend</h3>
-          <p class="muted">React, Next.js, Vite, Redux, Tailwind, HTML5/CSS3</p>
-          <div><span class="chip">React</span><span class="chip">Next.js</span><span class="chip">Vite</span><span class="chip">Tailwind</span><span class="chip">Redux</span></div>
+          <p class="muted">React, Vite, Redux, Tailwind, HTML5/CSS3</p>
+          <div><span class="chip">React</span><span class="chip">Vite</span><span class="chip">Tailwind</span><span class="chip">Redux</span></div>
         </div>
         <div class="card">
           <h3>Backend</h3>
-          <p class="muted">Node.js, Express, REST, Auth (JWT/OAuth), WebSockets</p>
-          <div><span class="chip">Express</span><span class="chip">JWT</span><span class="chip">Socket.io</span><span class="chip">Zod</span></div>
+          <p class="muted">Node.js, Express, REST</p>
+          <div><span class="chip">Express</span><span class="chip">JWT</span><span class="chip">Socket.io</span></div>
         </div>
         <div class="card">
           <h3>Data & Cloud</h3>
-          <p class="muted">MongoDB, PostgreSQL, Redis, Docker, AWS, CI/CD (GitHub Actions)</p>
-          <div><span class="chip">MongoDB</span><span class="chip">PostgreSQL</span><span class="chip">Redis</span><span class="chip">Docker</span><span class="chip">AWS</span></div>
+          <p class="muted">MongoDB, SQL, CI/CD (GitHub Actions)</p>
+          <div><span class="chip">MongoDB</span><span class="chip">SQL</span></div>
         </div>
       </div>
     </div>
@@ -337,10 +337,10 @@
       </div>
       <div class="row">
         <div class="card">
-          <h3>Experience</h3>
-          <div class="timeline">
+          <!-- <h3>Experience</h3> -->
+          <!-- <div class="timeline">
             <div class="tl-item">
-              <h4>Full‑stack Developer Intern • Acme Labs</h4>
+              
               <div class="muted">Jan 2025 – Apr 2025 · Remote</div>
               <p>Built RESTful APIs, integrated JWT auth, and improved Lighthouse performance from 72 → 92.</p>
               <div><span class="chip">Node.js</span> <span class="chip">React</span> <span class="chip">MongoDB</span></div>
@@ -353,17 +353,17 @@
             </div>
           </div>
         </div>
-        <div class="card">
+        <div class="card"> -->
           <h3>Education</h3>
           <div class="timeline">
             <div class="tl-item">
               <h4>B.Tech — Computer Science & Engineering</h4>
-              <div class="muted">2021 – 2025</div>
+              <div class="muted">2022 – 2026</div>
               <p>Coursework: DSA, DBMS, OS, CN, AI/ML, Cloud. Final‑year project on scalable MERN micro‑services.</p>
             </div>
             <div class="tl-item">
               <h4>Certifications & Achievements</h4>
-              <p>GCP Essentials, AWS Cloud Practitioner (in‑progress), CodeChef ★★★, LeetCode 300+ problems.</p>
+              <p> LeetCode 100+ problems.</p>
             </div>
           </div>
         </div>
