--- a/index.html
+++ b/index.html
@@ -173,14 +173,14 @@
         <h1 class="title">Suman Sourav Chakra — <span class="gradient">Full‑Stack (MERN) & AI Enthusiast</span></h1>
         <p class="subtitle">Final‑year B.Tech (CSE). I build performant web apps, explore AI/ML, and deploy on the cloud. Passionate about translating ideas into reliable, elegant software.</p>
         <div class="cta-row">
-          <a class="btn brand" href="#projects">View Projects</a>
+          <!-- <a class="btn brand" href="#projects">View Projects</a> -->
           <a class="btn" href="#about">About Me</a>
-          <a class="btn" href="assets/Suman_Sourav_Chakra_CV.pdf" download>Download CV</a>
+          <!-- <a class="btn" href="assets/Suman_Sourav_Chakra_CV.pdf" download>Download CV</a> -->
         </div>
         <div class="stats">
-          <div class="stat"><div class="num">15+ </div><div class="muted">Projects</div></div>
+          <div class="stat"><div class="num"> </div><div class="muted">Projects</div></div>
           <div class="stat"><div class="num">6+ </div><div class="muted">Tech Stacks</div></div>
-          <div class="stat"><div class="num">3 </div><div class="muted">Internships</div></div>
+          <!-- <div class="stat"><div class="num">3 </div><div class="muted">Internships</div></div> -->
         </div>
       </div>
       <div>
@@ -364,6 +364,10 @@
             <div class="tl-item">
               <h4>Certifications & Achievements</h4>
               <p> LeetCode 100+ problems.</p>
+              <p> NPTEL: - Programming in Java </p>
+                  <p>Design and Analysis of Algorithms</p>
+                  <p>Simplilearn: - Cybersecurity fundamentals</p>
+                  <p>Python Industry Oriented Training Certificate</p>
             </div>
           </div>
         </div>
@@ -372,7 +376,7 @@
   </section>
 
   <!-- TESTIMONIALS -->
-  <section id="testimonials">
+  <!-- <section id="testimonials">
     <div class="container">
       <div class="section-head">
         <h2 class="section-title">Testimonials</h2>
@@ -389,7 +393,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- CONTACT -->
   <section id="contact">
