--- a/index.html
+++ b/index.html
@@ -291,37 +291,37 @@
         <a class="pill" href="https://github.com/" target="_blank" rel="noreferrer">More on GitHub →</a>
       </div>
       <div class="grid">
-        <a class="card project" href="#" target="_blank" rel="noreferrer">
-          <img class="thumb" src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?q=80&w=1200&auto=format&fit=crop" alt="Project 1">
+        <a class="card project" href="https://suman7259.github.io/Travel-planner/" target="_blank" rel="noreferrer">
+          <img class="thumb" src="https://t4.ftcdn.net/jpg/00/65/48/25/360_F_65482539_C0ZozE5gUjCafz7Xq98WB4dW6LAhqKfs.jpg" alt="Project 1">
           <div class="meta">
             <div>
               <span class="tag">MERN</span>
               <span class="tag">JWT</span>
             </div>
-            <h3>TaskFlow — Team Task Manager</h3>
-            <p class="muted">Kanban boards, real‑time updates with Socket.io, role‑based access, Dockerized.</p>
-          </div>
-        </a>
-        <a class="card project" href="#" target="_blank" rel="noreferrer">
-          <img class="thumb" src="https://images.unsplash.com/photo-1677442136019-21780ecad995?q=80&w=1200&auto=format&fit=crop" alt="Project 2">
-          <div class="meta">
-            <div>
-              <span class="tag">Next.js</span>
-              <span class="tag">SSR</span>
-            </div>
             <h3>Travelwise — Smart Trip Planner</h3>
             <p class="muted">Itineraries, budget tracking, and map‑based discovery; hosted on Vercel + Mongo Atlas.</p>
           </div>
         </a>
-        <a class="card project" href="#" target="_blank" rel="noreferrer">
-          <img class="thumb" src="https://images.unsplash.com/photo-1556157382-97eda2d62296?q=80&w=1200&auto=format&fit=crop" alt="Project 3">
+        <a class="card project" href="https://suman7259.github.io/Weather-app/" target="_blank" rel="noreferrer">
+          <img class="thumb" src="https://img.freepik.com/premium-psd/snowflake-snow-clod-weather-3d-icon-illustration_47987-10705.jpg" alt="Project 2">
           <div class="meta">
             <div>
-              <span class="tag">Flask</span>
-              <span class="tag">ML</span>
+              <span class="tag">js</span>
+              <span class="tag">react</span>
             </div>
-            <h3>JokeSense — Sentiment & Humor Classifier</h3>
-            <p class="muted">Simple ML app to classify text humor level; train/test visualizations included.</p>
+            <h3>Weather App</h3>
+            <p class="muted">Itineraries, budget tracking, and map‑based discovery; hosted on Vercel + Mongo Atlas.</p>
+          </div>
+        </a>
+        <a class="card project" href="https://suman7259.github.io/Shoplite/" target="_blank" rel="noreferrer">
+          <img class="thumb" src="https://img.freepik.com/free-photo/black-friday-sales-sign-neon-light_23-2151833076.jpg?semt=ais_hybrid&w=740&q=80" alt="Project 3">
+          <div class="meta">
+            <div>
+              <span class="tag">React</span>
+              <span class="tag">JavaScript</span>
+            </div>
+            <h3>ShopLite.E-commerce Platform</h3>
+            <p class="muted">A website with some item listed</p>
           </div>
         </a>
       </div>
