--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
         <h1 class="title">Suman Sourav Chakra — <span class="gradient">Full‑Stack (MERN) & AI Enthusiast</span></h1>
         <p class="subtitle">Final‑year B.Tech (CSE). I build performant web apps, explore AI/ML, and deploy on the cloud. Passionate about translating ideas into reliable, elegant software.</p>
         <div class="cta-row">
-          <!-- <a class="btn brand" href="#projects">View Projects</a> -->
+          <a class="btn brand" href="#projects">View Projects</a>
           <a class="btn" href="#about">About Me</a>
           <!-- <a class="btn" href="assets/Suman_Sourav_Chakra_CV.pdf" download>Download CV</a> -->
         </div>
         <div class="stats">
-          <div class="stat"><div class="num"> </div><div class="muted">Projects</div></div>
+          <div class="stat"><div class="num">3+</div><div class="muted">Projects</div></div>
           <div class="stat"><div class="num">6+ </div><div class="muted">Tech Stacks</div></div>
           <!-- <div class="stat"><div class="num">3 </div><div class="muted">Internships</div></div> -->
         </div>
