--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       </div>
       <div>
         <div class="card hero-card center">
-          <img class="avatar" src="/me.jpg" alt="Profile avatar placeholder"/>
+          <img class="avatar" src="me.jpg" alt="Profile avatar placeholder"/>
           <h3 style="margin:.8rem 0 .2rem">Suman Sourav Chakra</h3>
           <div class="muted">Full‑stack Developer • AI/ML • Cloud</div>
           <div style="margin-top: .8rem;">
